syntax = "proto3";

option csharp_namespace = "MM.Message";
option go_package = "./;api";
option optimize_for = SPEED;

import "common.proto";
import "userDataNative.proto";

//好友操作类型
enum FriendOperatorType{
	//请求好友
	AskFriends = 0;
	//添加好友
	AddFriend = 3;
	//删除好友
	Delete = 4;
	//搜索好友
	SearchFriend = 5;
	//拜访好友
	VisitFriend = 6;
	//点赞好友
	Like = 7;
	//点赞robot
	RobotLike = 8;
	//Test
	Test = 9;
	//请求给自己点过赞的玩家数据
	AskUserLiked = 10;
	//删除给自己点过赞的玩家
	DelUserLiked = 11;
}

//好友调试操作类型
enum FriendDebugType {
	AddFriends = 0;
	SearchFriends = 1;
}


//好友申请操作类型
enum FriendApplyOperatorType {
	//请求好友申请列表
	AskApplyList = 0;
	//请求系统推荐好友
	RecommendList = 1;
	//同意申请
	Apply = 2;
	//拒绝申请
	Refuse = 3;
}

//好友数据
message FriendDatas {
	//好友列表
	repeated FriendData friendDatas = 1;
}

//好友操作
message CSFriendOperator {
	//操作类型
	FriendOperatorType type = 1;
	//好友的ID
	int64 userID = 2;
}

//好友操作服务器回包
message SCFriendData {
	//被点赞的数量
	int32 likeCount = 1;
	//请求的好友数据
	FriendDatas friendDatas = 2;
	//增加，搜索好友的数据
	FriendData friendData = 3; 
	//点赞过的玩家
	LikeData likeData = 4;
	//好友被点赞的数量
	int32 friendLikeCount = 5;
	//拜访的好友建筑数据
	VisitData mapData = 6;	
	//点赞过自己的玩家数据
	repeated UserLikedData likedSelfData = 7;
	//好友申请相关数据
	SCFriendApplyData friendApplyDatas = 8;
}

message VisitData{
	//建筑
	MapBuildingData buildingData = 1;
	//经验
	ExpData expData = 2;
	//建筑的解锁数据
	MapGridSprites	mapGridSprites = 3;
	//好友的数据
	FriendData friendData = 4;
}

message LikeData {
	//点赞过的玩家
	repeated int64 likeUsers = 1;
}

//点赞过自己的玩家
message UserLikedData {
	int64 userID = 1;
	string userName = 2;
	string headIcon = 3;
	E_CHANNEL_TYPE type = 4;
}

//好友申请操作
message CSFriendApplyOperator {
	FriendApplyOperatorType type = 1;
	int64 userID = 2;
}

//好友推荐
message FriendRecommend {
	int64 recommendTime = 1;
	repeated FriendData friendDatas = 2;
}

//好友申请操作服务器回包
message SCFriendApplyData {
	//请求的好友申请数据
	FriendDatas friendApplyDatas = 1;
	//系统推荐的好友数据
	FriendRecommend recommendDatas = 2;
}


message CSFriendDebug {
	//操作类型
	FriendDebugType operatorType = 1;
	//请求好友的页码
	int32 page = 2;
	//请求的数量
	int32 pageCount = 3;
	//用户ID
	int64 userID = 4;
	//最小等级
	int32 minLevel = 5;
	//最大等级
	int32 maxLevel = 6;
	//玩家类型(1 活跃 2 不活跃)
	int32 status = 7;
	//要添加好友的玩家ID列表
	repeated int64 addUserID = 8;
}

message SCFriendDebug {
	//符合条件的玩家好友ID
	repeated int64 UserIDs = 1;
	FriendDatas friendDatas = 2; 
}

message LikedFriendsData {
	//点赞过自己的玩家数据
	repeated UserLikedData likedData = 7;
}
